force-app/main/default/objects/Contractor_Recruitment__c/Contractor_Recruitment__c.object-meta.xml
<CustomObject>
    <description>Custom object for contractor recruiters and onboarders to use to track progress of new contractors.</description>
    <label>Contractor Recruitment Profile</label>
    <nameField>
        <label>Contractor Recruitment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contractor Recruitment Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>