force-app/main/default/objects/Contractor_Recruitment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The contractor business once it is in Gil/Salesforce</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contractor Recruitment Profiles</relationshipLabel>
    <relationshipName>Contractor_Recruitment_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>