force-app/main/default/objects/Contractor_Recruitment__c/fields/Account_Onboarding_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Onboarding_Status__c</fullName>
    <formula>TEXT(Account__r.Contractor_Onboarding_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Onboarding Status</label>
    <type>Text</type>
</CustomField>