force-app/main/default/objects/Contractor_Recruitment__c/fields/Branded_Trucks__c.field-meta.xml
<CustomField>
    <fullName>Branded_Trucks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the contractor has company branded trucks being deployed to jobs.</description>
    <inlineHelpText>Are the contractor&apos;s trucks branded with the company name and/or logo?</inlineHelpText>
    <label>Branded Trucks</label>
    <type>Checkbox</type>
</CustomField>