force-app/main/default/objects/Contractor_Recruitment__c/fields/Bulk_Record_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Record_Change_Date__c</fullName>
    <description>This field is for controlling access to the &quot;Change Stage&quot; Quick Action. Only managers and authorized users should be granted edit access to this field for mass updating records from list views.</description>
    <label>Bulk Record Change Date</label>
    <type>DateTime</type>
</CustomField>