force-app/main/default/objects/Contractor_Recruitment__c/fields/Business_Address_City__c.field-meta.xml
<CustomField>
    <fullName>Business_Address_City__c</fullName>
    <label>Business Address City</label>
    <type>TextArea</type>
</CustomField>