force-app/main/default/objects/Contractor_Recruitment__c/fields/Business_Address_Zip__c.field-meta.xml
<CustomField>
    <fullName>Business_Address_Zip__c</fullName>
    <label>Business Address Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>