force-app/main/default/objects/Contractor_Recruitment__c/fields/Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Type__c</fullName>
    <description>The legal structure of the business.</description>
    <inlineHelpText>How is the business legally set up?</inlineHelpText>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>General Partnership</fullName>
            </value>
            <value>
                <fullName>Limited Liability Corporation</fullName>
            </value>
            <value>
                <fullName>Sole Proprietor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>