force-app/main/default/objects/Contractor_Recruitment__c/fields/CBSA__c.field-meta.xml
<CustomField>
    <fullName>CBSA__c</fullName>
    <description>The CBSA code which designates the area where a contractor is able and willing to work.</description>
    <label>CBSA</label>
    <length>5</length>
    <type>Text</type>
</CustomField>