force-app/main/default/objects/Contractor_Recruitment__c/fields/Certified_Irrigation_Technician_CIT__c.field-meta.xml
<CustomField>
    <fullName>Certified_Irrigation_Technician_CIT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certified Irrigation Technician (CIT)</label>
    <type>Checkbox</type>
</CustomField>