force-app/main/default/objects/Contractor_Recruitment__c/fields/Closed_Lost_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Date__c</fullName>
    <description>The day the lead was put into the lead stage, &quot;closed lost&quot;</description>
    <label>Closed Lost Date</label>
    <type>Date</type>
</CustomField>