force-app/main/default/objects/Contractor_Recruitment__c/fields/Closed_Won_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Date__c</fullName>
    <description>Date the lead was put into the lead stage, &quot;closed won&quot;</description>
    <label>Closed Won Date</label>
    <type>Date</type>
</CustomField>