force-app/main/default/objects/Contractor_Recruitment__c/fields/Company_Uniform__c.field-meta.xml
<CustomField>
    <fullName>Company_Uniform__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the contractor requires their employees to wear an established uniform either with or without the company name/logo.  This will also indicate if there are contractor company appearance requirements.</description>
    <inlineHelpText>Does the company require its employees to adhere to a uniform or appearance standard while on jobs?</inlineHelpText>
    <label>Company Uniform</label>
    <type>Checkbox</type>
</CustomField>