force-app/main/default/objects/Contractor_Recruitment__c/fields/Completed_Certification_Wheel__c.field-meta.xml
<CustomField>
    <fullName>Completed_Certification_Wheel__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check the box once the contractor&apos;s certification wheel has been completed and the contractor is ready to receive jobs.</inlineHelpText>
    <label>Completed Certification Wheel</label>
    <type>Checkbox</type>
</CustomField>