force-app/main/default/objects/Contractor_Recruitment__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The individual contractor once put into Gil/Salesforce</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contractor Recruitment Profiles</relationshipLabel>
    <relationshipName>Contractor_Recruitment_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>