force-app/main/default/objects/Contractor_Recruitment__c/fields/Contractor_ID__c.field-meta.xml
<CustomField>
    <fullName>Contractor_ID__c</fullName>
    <description>The Gil-issued contractor ID.  This will be the ID for the contractor business.</description>
    <label>Contractor ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>