force-app/main/default/objects/Contractor_Recruitment__c/fields/Contractor_Website__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Website__c</fullName>
    <description>The website for the contractor if they have one.</description>
    <label>Contractor Website</label>
    <type>Url</type>
</CustomField>