force-app/main/default/objects/Contractor_Recruitment__c/fields/CPO_Pool_License__c.field-meta.xml
<CustomField>
    <fullName>CPO_Pool_License__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CPO Pool License</label>
    <type>Checkbox</type>
</CustomField>