force-app/main/default/objects/Contractor_Recruitment__c/fields/Debris_Removal__c.field-meta.xml
<CustomField>
    <fullName>Debris_Removal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Debris &amp; Trash Removal</label>
    <type>Checkbox</type>
</CustomField>