force-app/main/default/objects/Contractor_Recruitment__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>Additional details about the prospective contractor which may be valuable to other members of the TE team.</description>
    <label>Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>