force-app/main/default/objects/Contractor_Recruitment__c/fields/First_Job_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Job_Completed_Date__c</fullName>
    <description>Date the first scheduled job was completed successfully.  If the job resulted in a second chance, put the date of the successful completion of the second chance.</description>
    <inlineHelpText>Date the first scheduled job was completed successfully.  If the job resulted in a second chance, put the date of the successful completion of the second chance</inlineHelpText>
    <label>First Job Completed Date</label>
    <type>Date</type>
</CustomField>