force-app/main/default/objects/Contractor_Recruitment__c/fields/First_Job_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Job_Scheduled_Date__c</fullName>
    <description>Date of the assigned first job for the newly recruited contractor.</description>
    <label>First Job Scheduled Date</label>
    <type>Date</type>
</CustomField>