force-app/main/default/objects/Contractor_Recruitment__c/fields/First_Onboarding_Task_Created__c.field-meta.xml
<CustomField>
    <fullName>First_Onboarding_Task_Created__c</fullName>
    <label>First Onboarding Task Created</label>
    <type>Date</type>
</CustomField>