force-app/main/default/objects/Contractor_Recruitment__c/fields/Gutter_Cleaning__c.field-meta.xml
<CustomField>
    <fullName>Gutter_Cleaning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gutter Cleaning</label>
    <type>Checkbox</type>
</CustomField>