force-app/main/default/objects/Contractor_Recruitment__c/fields/How_Did_You_Hear_About_TaskEasy__c.field-meta.xml
<CustomField>
    <fullName>How_Did_You_Hear_About_TaskEasy__c</fullName>
    <label>How Did You Hear About TaskEasy?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advertisement</fullName>
            </value>
            <value>
                <fullName>Blog Post</fullName>
            </value>
            <value>
                <fullName>Equipment Dealer</fullName>
            </value>
            <value>
                <fullName>Google Search</fullName>
            </value>
            <value>
                <fullName>Promotional Email</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Tradeshow</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>