force-app/main/default/objects/Contractor_Recruitment__c/fields/Landscape_Contractor_S330_License__c.field-meta.xml
<CustomField>
    <fullName>Landscape_Contractor_S330_License__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Landscape Contractor S330 License</label>
    <type>Checkbox</type>
</CustomField>