force-app/main/default/objects/Contractor_Recruitment__c/fields/Lawn_Mowing__c.field-meta.xml
<CustomField>
    <fullName>Lawn_Mowing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check the box if this contractor is capable of performing lawn mowing.</description>
    <inlineHelpText>Does this contractor perform lawn mowing services?</inlineHelpText>
    <label>Lawn Mowing</label>
    <type>Checkbox</type>
</CustomField>