force-app/main/default/objects/Contractor_Recruitment__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <inlineHelpText>Where did the contractor lead originate from?</inlineHelpText>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contractor Landing Page</fullName>
            </value>
            <value>
                <fullName>Digital Advertising</fullName>
            </value>
            <value>
                <fullName>Equipment Dealer</fullName>
            </value>
            <value>
                <fullName>Gated Content</fullName>
            </value>
            <value>
                <fullName>Lead Generation Sites</fullName>
            </value>
            <value>
                <fullName>Marketing Email</fullName>
            </value>
            <value>
                <fullName>Paid Lists</fullName>
            </value>
            <value>
                <fullName>Personal Referral</fullName>
            </value>
            <value>
                <fullName>Sales Prospecting/Cold Call</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Tradeshow</fullName>
            </value>
            <value>
                <fullName>Traditional Advertising</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Web Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>