force-app/main/default/objects/Contractor_Recruitment__c/fields/Lead_Stage__c.field-meta.xml
<CustomField>
    <fullName>Lead_Stage__c</fullName>
    <description>Describes where the contractor is in during the recruitment process.</description>
    <label>Lead Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Lead</fullName>
                <default>true</default>
                <label>New Lead</label>
            </value>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>Account Created - Nurturing</fullName>
            </value>
            <value>
                <fullName>Waiting For Work</fullName>
            </value>
            <value>
                <fullName>First Job Scheduled</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
            <value>
                <fullName>CBSA at Capacity</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
                <isActive>false</isActive>
                <label>Onboarding</label>
            </value>
            <value>
                <fullName>Working</fullName>
                <isActive>false</isActive>
                <label>Working</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>