force-app/main/default/objects/Contractor_Recruitment__c/fields/LOGIC_First_Job_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>LOGIC_First_Job_Scheduled__c</fullName>
    <formula>First_Job_Scheduled_Date__c &lt;= TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LOGIC First Job Scheduled</label>
    <type>Checkbox</type>
</CustomField>