force-app/main/default/objects/Contractor_Recruitment__c/fields/Market_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Market_Assignment__c</fullName>
    <formula>Account__r.Market_Assignment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Assignment</label>
    <type>Text</type>
</CustomField>