force-app/main/default/objects/Contractor_Recruitment__c/fields/Mulch_Installation_Refresh__c.field-meta.xml
<CustomField>
    <fullName>Mulch_Installation_Refresh__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mulch Installation/Refresh</label>
    <type>Checkbox</type>
</CustomField>