force-app/main/default/objects/Contractor_Recruitment__c/fields/Onboarder__c.field-meta.xml
<CustomField>
    <fullName>Onboarder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The person who assumed the on-boarding responsibilities for the recruited contractor.</description>
    <label>Onboarder</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contractor_Recruitment_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>