force-app/main/default/objects/Contractor_Recruitment__c/fields/Onboarding_Closed_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Closed_Lost_Reason__c</fullName>
    <description>Reasons why the contractor did not successfully pass the on-boarding process to become an active member of our network.</description>
    <inlineHelpText>Why did the contractor not pass the on-boarding process?</inlineHelpText>
    <label>Onboarding Closed Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Lead_Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPB</fullName>
            </value>
            <value>
                <fullName>Doesn&apos;t meet legal requirements</fullName>
            </value>
            <value>
                <fullName>Job offered is too far</fullName>
            </value>
            <value>
                <fullName>No Communication</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Pay is too low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>