force-app/main/default/objects/Contractor_Recruitment__c/fields/Pesticide_Insecticide_Application_Licens__c.field-meta.xml
<CustomField>
    <fullName>Pesticide_Insecticide_Application_Licens__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pesticide/Insecticide Application Licens</label>
    <type>Checkbox</type>
</CustomField>