force-app/main/default/objects/Contractor_Recruitment__c/fields/Primary_Phone__c.field-meta.xml
<CustomField>
    <fullName>Primary_Phone__c</fullName>
    <description>Primary phone number for the contractor.</description>
    <inlineHelpText>What is the best number to contact the contractor for recruitment and task-related calls?</inlineHelpText>
    <label>Primary Phone</label>
    <type>Phone</type>
</CustomField>