force-app/main/default/objects/Contractor_Recruitment__c/fields/Recruitment_Closed_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Recruitment_Closed_Lost_Reason__c</fullName>
    <description>Disposition for why this contractor did not become part of our contractor network during the recruitment process?</description>
    <label>Recruitment Closed Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Lead_Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Can&apos;t Take On More Work Right Now</fullName>
            </value>
            <value>
                <fullName>Unqualified</fullName>
            </value>
            <value>
                <fullName>Doesn&apos;t Meet Legal Requirements</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>