force-app/main/default/objects/Contractor_Recruitment__c/fields/Spring_Cleanup__c.field-meta.xml
<CustomField>
    <fullName>Spring_Cleanup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spring Cleanup</label>
    <type>Checkbox</type>
</CustomField>