force-app/main/default/objects/Contractor_Recruitment__c/fields/Sprinkler_Installation__c.field-meta.xml
<CustomField>
    <fullName>Sprinkler_Installation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sprinkler Installation</label>
    <type>Checkbox</type>
</CustomField>