force-app/main/default/objects/Contractor_Recruitment__c/fields/Sprinkler_Repair__c.field-meta.xml
<CustomField>
    <fullName>Sprinkler_Repair__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sprinkler Repair</label>
    <type>Checkbox</type>
</CustomField>